# nmpde-labs-aa-25-26

./: .gitignore  README.md
examples/gmsh/: mesh-square.geo
lab-01/: CMakeLists.txt
lab-01/src/: Poisson1D.cpp  Poisson1D.hpp  exercise-01.cpp  exercise-02.cpp  extension1_Reading_parameters_from_a_file.MD
lab-02/: CMakeLists.txt
lab-02/src/: DiffusionReaction.cpp  DiffusionReaction.hpp  Poisson2D.cpp  Poisson2D.hpp  exercise-01.cpp  exercise-02.cpp
lab-03/: CMakeLists.txt
lab-03/src/: DiffusionReaction-parallel.cpp  DiffusionReaction-parallel.hpp  DiffusionReaction.cpp  DiffusionReaction.hpp  exercise-01-parallel.cpp  exercise-01.cpp
lab-04/: CMakeLists.txt
lab-04/src/: Heat.cpp  Heat.hpp  exercise-01.cpp
lab-05/src/: NonLinearDiffusion.cpp
lab-06/src/: LinearElasticity.cpp
lab-08/src/: exercise-01.cpp
